--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Sorcerer's Secret Spells</title>
 </head>
 <body>
+    <header id="logo">
+        <img id="logo" src="assets/images/wands.webp" alt="Our Logo With Two Wands">
+    </header>
    
     <script src="assets/js/script.js"></script>
 </body>
