Added CSS styling to the logo in the header

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Sorcerer's Secret Spells</title>
 </head>
 <body>
-    <header id="logo">
-        <img id="logo" src="assets/images/wands.webp" alt="Our Logo With Two Wands">
+    <header id="logo-header">
+        <img id="logo-image" src="assets/images/wands.webp" alt="Our Logo With Two Wands">
     </header>
    
     <script src="assets/js/script.js"></script>
