--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+    content="Sorcerer's Secret Spells is a an online quiz on magical spells">
+    <meta name="keywords" content="sorcerer, wizard, witch, magical spells, magic, magic quiz, spells quiz, test your knowledge in spells, fun quiz game">
+    <meta name="author" content="Arathi Vaiar">
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--Title-->
     <title>Sorcerer's Secret Spells</title>
 </head>
 <body>
