Added footer and its styling. Added other relevant HTML tags

--- a/index.html
+++ b/index.html
@@ -18,10 +18,26 @@
     <title>Sorcerer's Secret Spells</title>
 </head>
 <body>
+    <!-- Header -->
     <header id="logo-header">
         <img id="logo-image" src="assets/images/wands.webp" alt="Our Logo With Two Wands">
     </header>
-   
+    <!-- Main content -->
+    <main>
+        <div>
+            <i class="fa-solid fa-hat-wizard"></i>
+        </div>
+    </main>
+    <!-- Footer -->
+    <footer>
+        <p>
+            <i class="fa-solid fa-wand-sparkles"></i>
+            Copyright© Sorcerer's Secret Spells 2024
+        </p>
+    </footer>
+    <!-- JavaScript -->
     <script src="assets/js/script.js"></script>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/1bd7b5e6b1.js" crossorigin="anonymous"></script>
 </body>
 </html>
