Added a few styling changes to the HTML body for the main content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Main content -->
     <main>
         <div>
-            <i class="fa-solid fa-hat-wizard"></i>
+            <i class="fa-solid fa-hat-wizard"></
         </div>
     </main>
     <!-- Footer -->
