Added the quiz name as a main heading on the body and added its CSS styling also

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Main content -->
     <main>
         <div>
-            <i class="fa-solid fa-hat-wizard"></
+            <h1>Sorcerer's Secret Spells <i class="fa-solid fa-hat-wizard"></i></h1>
         </div>
     </main>
     <!-- Footer -->
