Added HTML code for welcome screen and begin button and its associated CSS styling

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
         <div>
             <h1>Sorcerer's Secret Spells <i class="fa-solid fa-hat-wizard"></i></h1>
         </div>
+        <div class="welcome-screen">
+            <button class="button magic-effect" id="begin-button" data-glow-offset="true">
+                Let's Begin!
+                <svg class="glow-container">
+                    <rect height="1" width="1" stroke-linecap="round" class="glow-blur"></rect>
+                    <rect height="1" width="1" stroke-linecap="round" class="glow-line"></rect>
+                </svg>
+            </button>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
