Added HTML code for quiz continer including counters for questions, a timer, questions and options, and a button for next question

--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
                 </svg>
             </button>
         </div>
+        <div id="quiz-container">
+            <div class="quiz-header">
+                <div class="number-of-count">
+                    <span class="number-of-question">
+                        number of questions
+                    </span>
+                </div>
+                <div class="timer">
+                    <i class="fa-solid fa-hourglass-start"></i>
+                    <span class="time-left">15s</span>
+                </div>
+            </div>
+            <div id="question-container">
+                <!-- questions and options will display here-->
+            </div>
+            <button id="next-question-button">Next</button>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
