Added more styling to the quiz container, score container, try agin button etc.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
             </div>
             <button id="next-question-button">Next</button>
         </div>
+        <div class="score-container hide">
+            <div id="your-score">Your Score</div>
+            <button class="button magic-effect" id="try-again-button" data-glow-offset="true">
+                Try Again
+                <svg class="glow-container">
+                    <rect height="1" width="1" stroke-linecap="round" class="glow-blur"></rect>
+                    <rect height="1" width="1" stroke-linecap="round" class="glow-line"></rect>
+                </svg>
+            </button>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
