Added CSS property to give a glowing effect to the text in the buttons for a magical touch using keyframes

--- a/index.html
+++ b/index.html
@@ -28,12 +28,8 @@
             <h1>Sorcerer's Secret Spells <i class="fa-solid fa-hat-wizard"></i></h1>
         </div>
         <div class="welcome-screen">
-            <button class="button magic-effect" id="begin-button" data-glow-offset="true">
+            <button class="button glow" id="begin-button">
                 Let's Begin!
-                <svg class="glow-container">
-                    <rect height="1" width="1" stroke-linecap="round" class="glow-blur"></rect>
-                    <rect height="1" width="1" stroke-linecap="round" class="glow-line"></rect>
-                </svg>
             </button>
         </div>
         <div id="quiz-container">
@@ -55,12 +51,8 @@
         </div>
         <div class="score-container hide">
             <div id="your-score">Your Score</div>
-            <button class="button magic-effect" id="try-again-button" data-glow-offset="true">
+            <button class="button glow" id="try-again-button">
                 Try Again
-                <svg class="glow-container">
-                    <rect height="1" width="1" stroke-linecap="round" class="glow-blur"></rect>
-                    <rect height="1" width="1" stroke-linecap="round" class="glow-line"></rect>
-                </svg>
             </button>
         </div>
     </main>
