Fixed various minor issues.Added a few changes for testing purposes

--- a/index.html
+++ b/index.html
@@ -33,16 +33,7 @@
             </button>
             <button class="popup glow" id="game-rules-button">
                 Game Rules
-                <span class="popuptext" id="game-rules-text">
-                    The quiz has total 20 questions on hte topic of magical spells.
-                    Each question has 4 options out of which one will be the correct answer.
-                    There is a timer of 15 seconds to answer each question before moving onto the next.
-                    For each correct answer, you will get 10 points.At the end, the final score is displayed.
-                    If you score above 170, you are an expert. 
-                    If the score is between 70 and 170, you need to practice your spells.
-                    If you score less than 70, you better learn your spells before you need them!
-                    Ready for some magical fun?
-                </span>
+                <span class="popuptext" id="game-rules-text">How to play?</span>
             </button>
         </div>
         <div id="quiz-container">
