Updated a few properties of buttons like background color and text. Added a line break between the three buttons on home page

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
                 Game Rules
                 <span class="popuptext" id="game-rules-text">How to play?</span>
             </button>
-            <button class="button glow" id="begin-button">
-                Let's Begin!
+            <br>
+            <button class="button glow" id="begin-quiz-button">
+                Begin Quiz
             </button>
+            <br>
             <button class="button glow" id="submit-spell-button">
-                Submit A Spell
+                Submit Spell
             </button> 
         </div>
         <div id="quiz-container">
@@ -64,7 +66,7 @@
         </div>
         <div class="submit-spell-form-container hide">
             <form onsubmit="sendEmail(); reset(); return false;">
-                <h2>Submit A Spell</h2>
+                <h2>Submit Spell</h2>
                 <input type="text" id="name" placeholder="Enter Your Name Here" required>
                 <input type="email" id="email" placeholder="Enter Your Email Here" required>
                 <input type="text" id="phone" placeholder="Enter Your Phone Number Here" required>
