Added HTML and CSS for question and options inside the quiz container

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 </div>
             </div>
             <div id="question-container">
-                <!-- questions and options will display here-->
+                <div class="question" id="question-div"></div>
+                <div class="options" id="options-div"></div>
             </div>
             <button id="next-question-button">Next</button>
         </div>
