Updated font family property for the 3 buttons. Updated text content for a button. Updated JS code for displaying the submit spell form

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </button>
             <br>
             <button class="button glow" id="submit-spell-button">
-                Submit Spell
+                Cast Spell
             </button> 
         </div>
         <div id="quiz-container">
@@ -65,7 +65,7 @@
                 Try Again
             </button>
         </div>
-        <div class="submit-spell-form-container hide">
+        <div class="submit-spell-form-container hide" id="submit-spell-form">
             <form onsubmit="sendEmail(); reset(); return false;">
                 <h2>Submit Spell</h2>
                 <input type="text" id="name" placeholder="Enter Your Name Here" required>
