Added a new logo image near the main heading. Edited the HTML header code and its associated CSS styling

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
     <title>Sorcerer's Secret Spells</title>
 </head>
 <body>
-    <!-- Header -->
-    <header id="logo-header">
-        <img id="logo-image" src="assets/images/wands.webp" alt="Our Logo With Two Wands">
-    </header>
     <!-- Main content -->
     <main>
         <div>
-            <h1>Sorcerer's Secret Spells <i class="fa-solid fa-hat-wizard"></i></h1>
+           <h1 class="glow">
+                <img id="logo-image" src="assets/images/logo.webp" alt="Our Logo">
+                Sorcerer's Secret Spells <i class="fa-solid fa-hat-wizard"></i>
+            </h1>
         </div>
         <div class="welcome-screen">
             <button class="popup glow" id="game-rules-button">
