--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <div class="submit-spell-form-container hide" id="submit-spell-form">
             <form onsubmit="sendEmail(); reset(); return false;">
                 <h2>Submit Spell</h2>
-                <input type="text" id="name" placeholder="Enter Your Name Here" required>
-                <input type="email" id="email" placeholder="Enter Your Email Here" required>
-                <input type="text" id="phone" placeholder="Enter Your Phone Number Here" required>
+                <input type="text" id="name" placeholder="Enter Your Name Here" required autocomplete="off">
+                <input type="email" id="email" placeholder="Enter Your Email Here" required autocomplete="off">
+                <input type="text" id="phone" placeholder="Enter Your Phone Number Here" required autocomplete="off">
                 <textarea name="message" id="message" rows="4" placeholder="Write your spell here..." required></textarea>
                 <button type="submit" aria-label="Click to Submit Your Spell">Submit Spell</button>
             </form>
