--- a/index.html
+++ b/index.html
@@ -27,18 +27,8 @@
             </h1>
         </div>
         <div class="welcome-screen">
-            <button class="popup glow" id="game-rules-button">
+            <button class="button glow" id="game-rules-button">
                 Game Rules
-                <div class="popuptext hide" id="game-rules-text">
-                    The quiz has total 20 questions.
-                    Each question has 4 options out of which one will be the correct answer.
-                    There is a timer of 15 seconds to answer each question before moving onto the next.
-                    For each correct answer, you'll get 10 points. At the end, the final score is displayed.
-                    If you score above 170, you are an expert witch or wizard.
-                    If the score is between 70 and 170, you need to practice your spells.
-                    If you score less than 70, you better learn your spells before you need them!
-                    Ready for some magical fun?
-                </div>
             </button>
             <br>
             <button class="button glow" id="begin-quiz-button">
@@ -48,6 +38,16 @@
             <button class="button glow" id="submit-spell-button">
                 Cast Spell
             </button> 
+        </div>
+        <div class="popuptext hide" id="game-rules-text">
+            The quiz has total 20 questions.
+            Each question has 4 options out of which one will be the correct answer.
+            There is a timer of 15 seconds to answer each question before moving onto the next.
+            For each correct answer, you'll get 10 points. At the end, the final score is displayed.
+            If you score above 170, you are an expert witch or wizard.
+            If the score is between 70 and 170, you need to practice your spells.
+            If you score less than 70, you better learn your spells before you need them!
+            Ready for some magical fun?
         </div>
         <div id="quiz-container">
             <div class="quiz-header">
