Updated HTML properties and CSS styling of the Submit Spell Form

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <input type="text" id="name" placeholder="Enter Your Name Here" required autocomplete="off">
                 <input type="email" id="email" placeholder="Enter Your Email Here" required autocomplete="off">
                 <input type="text" id="phone" placeholder="Enter Your Phone Number Here" required autocomplete="off">
-                <textarea name="message" id="message" rows="4" placeholder="Write your spell here..." required></textarea>
+                <textarea name="message" id="message" rows="4" placeholder="Enter Your Spell Here" required></textarea>
                 <button type="submit" aria-label="Click to Submit Your Spell">Submit Spell</button>
             </form>
         </div>
