Removed unused images from assets folder. Edited properties of background image inside quiz container. Updated Next question button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="question" id="question-div"></div>
                 <div class="options" id="options-div"></div>
             </div>
-            <button id="next-question-button">Next Question</button>
+            <button id="next-question-button">Next</button>
         </div>
         <div class="score-container hide">
             <div id="your-score">Your Score</div>
