Updated text displayed in the footer. Minor CSS change

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <footer>
         <p>
             <i class="fa-solid fa-wand-sparkles"></i>
-            Copyright© Sorcerer's Secret Spells 2024
+                Copyright© 2024 Sorcerer's Secret Spells
         </p>
     </footer>
     <!-- JavaScript -->
