--- a/index.html
+++ b/index.html
@@ -28,14 +28,17 @@
         </div>
         <div class="welcome-screen">
             <button class="button glow" id="game-rules-button">
+                <i class="fa-solid fa-broom-ball"></i>
                 Game Rules
             </button>
             <br>
             <button class="button glow" id="begin-quiz-button">
+                <i class="fa-solid fa-hat-wizard"></i>
                 Begin Quiz
             </button>
             <br>
             <button class="button glow" id="submit-spell-button">
+                <i class="fa-solid fa-wand-sparkles"></i>
                 Cast Spell
             </button> 
         </div>
