--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                 </div>
             </div>
             <div id="question-container">
-                <div class="question" id="question-div"></div>
-                <div class="options" id="options-div"></div>
+                <!-- questions and options will display here
+                    <div class="question" id="question-div"></div>
+                    <div class="options" id="options-div"></div>-->
             </div>
             <button id="next-question-button">Next</button>
         </div>
