Minor updates in various files for testing purpose

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="question" id="question-div"></div>
                     <div class="options" id="options-div"></div>-->
             </div>
-            <button id="next-question-button">Next</button>
+            <button class="button glow" id="next-question-button">Next</button>
         </div>
         <div class="score-container hide">
             <div id="your-score">Your Score</div>
