Updated the Game Rules text

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         </div>
         <div class="popuptext hide" id="game-rules-text">
             The quiz has total 20 questions.
-            Each question has 4 options out of which one will be the correct answer.
-            There is a timer of 15 seconds to answer each question before moving onto the next.
-            For each correct answer, you'll get 10 points. At the end, the final score is displayed.
-            If you score above 170, you are an expert witch or wizard.
-            If the score is between 70 and 170, you need to practice your spells.
-            If you score less than 70, you better learn your spells before you need them!
+            Each question has 4 options.
+            There is a timer set for each question.
+            For each correct answer, you'll get 1 point.
+            If you score above 17, you are an expert witch or wizard.
+            If the score is between 7 and 17, you need to practice your spells.
+            If you score less than 7, you better learn your spells before actually you need them!
             Ready for some magical fun?
         </div>
         <div id="quiz-container">
