Changed the background image of quiz container for better readability. Also updated the background of the question display.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Cast Spell
             </button> 
         </div>
-        <div class="popuptext hide" id="game-rules-text">
+        <div class="popuptext hide" id="game-rules-text hide">
             The quiz has total 20 questions.
             Each question has 4 options.
             There is a timer set for each question.
@@ -65,9 +65,7 @@
                 </div>
             </div>
             <div id="question-container">
-                <!-- questions and options will display here
-                    <div class="question" id="question-div"></div>
-                    <div class="options" id="options-div"></div>-->
+                <!-- questions and options will display here -->
             </div>
             <button class="button glow" id="next-question-button">Next</button>
         </div>
