Minor updates to Game Rules text and quiz container background

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             There is a timer set for each question.
             For each correct answer, you'll get 1 point.
             If you score above 17, you are an expert witch or wizard.
-            If the score is between 7 and 17, you need to practice your spells.
+            If your score is between 7 & 17, you should practice your spells.
             If you score less than 7, you better learn your spells before actually you need them!
-            Ready for some magical fun?
+            Ready for some magical fun? 
         </div>
         <div id="quiz-container">
             <div class="quiz-header">
