--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <div>
            <h1 class="glow">
-                <img id="logo-image" src="assets/images/logo.webp" alt="Our Logo">
+                <img id="logo-image" src="assets/images/wands.webp" alt="Our logo with two wands">
                 Sorcerer's Secret Spells <i class="fa-solid fa-hat-wizard"></i>
             </h1>
         </div>
