Updated the Game Rules text to include a welcome message to the player and a few more details

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
             <div class="rules">
                 <h3>Game Rules</h3>
                 <div>
-                        The quiz has total 20 questions.
-                        Each question has 4 options.
-                        A timer is set for each question.
+                        Welcome to Sorcerer's Secret Spells.
+                        The quiz has total 20 questions on magical spells.
+                        Each question has 4 options and a timer is set.
                         For each correct answer, you'll get 1 point.
                         If you score above 17, you are an expert witch or wizard.
                         If the score is between 7 & 17, you need to practice your spells.
                         If you score less than 7, you better learn your spells before you actually need them!
-                        Ready for some magical fun?
+                        Once you are ready for some magical fun, click Begin Quiz.
                 </div>
                 <span class="rules-close" title="Click to close Game Rules"><i class="fa-regular fa-circle-xmark"></i></span>
             </div>
