Removed Game Rules button and added the rules text in the welcome screen. Added its associated styling. Removed the unused JS code which is no longer needed

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
             </h1>
         </div>
         <div class="welcome-screen">
-            <button class="button glow" id="game-rules-button">
+          <!--  <button class="button glow" id="game-rules-button">
                 <i class="fa-solid fa-broom-ball"></i>
                 Game Rules
             </button>
             <br>
+            -->
             <button class="button glow" id="begin-quiz-button">
                 <i class="fa-solid fa-hat-wizard"></i>
                 Begin Quiz
@@ -42,21 +43,15 @@
                 Cast Spell
             </button> 
         </div>
-        <div class="rules-container">
-            <div class="rules">
-                <h3>Game Rules</h3>
-                <div>
-                        Welcome to Sorcerer's Secret Spells.
-                        The quiz has total 20 questions on magical spells.
-                        Each question has 4 options and a timer is set.
-                        For each correct answer, you'll get 1 point.
-                        If you score above 17, you are an expert witch or wizard.
-                        If the score is between 7 & 17, you need to practice your spells.
-                        If you score less than 7, you better learn your spells before you actually need them!
-                        Once you are ready for some magical fun, click Begin Quiz.
-                </div>
-                <span class="rules-close" title="Click to close Game Rules"><i class="fa-regular fa-circle-xmark"></i></span>
-            </div>
+        <div id="game-rules">
+            <h2><i class="fa-solid fa-broom-ball"></i> Game Rules</h2>
+            <p>
+                Welcome to Sorcerer's Secret Spells, a quiz on magical spells.<br>
+                If you score above 17, you are an expert Witch or Wizard.<br>
+                If the score is between 7 & 17, you need a bit more practice.<br>
+                If you score less than 7, even Muggles know better than that!<br>
+                Once you are ready for some magical fun, click Begin Quiz.
+            </p>
         </div>
         <div id="quiz-container">
             <div class="quiz-header">
