Added the glow property to the final score display

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <button class="button glow" id="next-question-button">Next</button>
         </div>
         <div class="score-container hide">
-            <div id="your-score">Your Score</div>
+            <div class="glow" id="your-score">Your Score</div>
             <button class="button glow" id="try-again-button">
                 Try Again
             </button>
