Updated comments. Added hide property for the elements to stay hidden while initial loading

--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
                 Once you are ready for some magical fun, click Begin Quiz.
             </p>
         </div>
-        <div id="quiz-container">
-            <div class="quiz-header">
-                <div class="number-of-count">
-                    <span class="number-of-question">
+        <div id="quiz-container hide">
+            <div class="quiz-header hide">
+                <div class="number-of-count hide">
+                    <span class="number-of-question hide">
                         number of questions
                     </span>
                 </div>
-                <div class="timer">
+                <div class="timer hide">
                     <i class="fa-solid fa-hourglass-start"></i>
                     <span class="time-left">10s</span>
                 </div>
             </div>
-            <div id="question-container">
-                <!-- questions and options will display here -->
+            <div id="question-container hide">
+                <!-- questions and options will be displayed here -->
             </div>
-            <button class="button glow" id="next-question-button">Next</button>
+            <button class="button glow hide" id="next-question-button">Next</button>
         </div>
         <div class="score-container hide">
             <div class="glow" id="your-score">Your Score</div>
