Removed hide property of a few elements added for testing purposes

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <div id="quiz-container hide">
             <div class="quiz-header hide">
                 <div class="number-of-count hide">
-                    <span class="number-of-question hide">
+                    <span class="number-of-question">
                         number of questions
                     </span>
                 </div>
-                <div class="timer hide">
+                <div class="timer">
                     <i class="fa-solid fa-hourglass-start"></i>
                     <span class="time-left">10s</span>
                 </div>
@@ -62,7 +62,7 @@
             <div id="question-container hide">
                 <!-- questions and options will be displayed here -->
             </div>
-            <button class="button glow hide" id="next-question-button">Next</button>
+            <button class="button glow" id="next-question-button">Next</button>
         </div>
         <div class="score-container hide">
             <div class="glow" id="your-score">Your Score</div>
