--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 Once you are ready for some magical fun, click Begin Quiz.
             </p>
         </div>
-        <div id="quiz-container hide">
+        <div id="quiz-container">
             <div class="quiz-header hide">
-                <div class="number-of-count hide">
+                <div class="number-of-count">
                     <span class="number-of-question">
                         number of questions
                     </span>
@@ -59,7 +59,7 @@
                     <span class="time-left">10s</span>
                 </div>
             </div>
-            <div id="question-container hide">
+            <div id="question-container">
                 <!-- questions and options will be displayed here -->
             </div>
             <button class="button glow" id="next-question-button">Next</button>
