Fixed the issue in displaying the quiz container properly

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 Once you are ready for some magical fun, click Begin Quiz.
             </p>
         </div>
-        <div id="quiz-container">
-            <div class="quiz-header hide">
+        <div id="quiz-container" class="hide">
+            <div class="quiz-header">
                 <div class="number-of-count">
                     <span class="number-of-question">
                         number of questions
