Fixed 405 Not Allowed issue with the form submit redirection

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </button>
         </div>
         <div class="submit-spell-form-container hide" id="submit-spell-form">
-            <form onsubmit="sendEmail(); reset(); return false;" method="POST" action="thankyou.html">
+            <form onsubmit="sendEmail(); reset(); return false;" action="thankyou.html">
                 <h2>Submit Spell</h2>
                 <input type="text" id="name" placeholder="Enter Your Name Here" required autocomplete="off">
                 <input type="email" id="email" placeholder="Enter Your Email Here" required autocomplete="off">
