Updated the code to display game rules text upon clicking a button

--- a/index.html
+++ b/index.html
@@ -35,16 +35,11 @@
                 <i class="fa-solid fa-wand-sparkles"></i>
                 Cast Spell
             </button> 
-        </div>
-        <div id="game-rules">
-            <h2><i class="fa-solid fa-broom-ball"></i> Game Rules</h2>
-            <p>
-                Welcome to Sorcerer's Secret Spells, a quiz on magical spells.<br>
-                If you score above 17, you are an expert Witch or Wizard.<br>
-                If the score is between 7 & 17, you need a bit more practice.<br>
-                If you score less than 7, even Muggles know better than that!<br>
-                Once you are ready for some magical fun, click Begin Quiz.
-            </p>
+            <br>
+            <button class="button glow" id="game-rules-button">
+                <i class="fa-solid fa-broom-ball"></i>
+                Game Rules
+            </button> 
         </div>
         <div id="quiz-container" class="hide">
             <div class="quiz-header">
@@ -78,6 +73,16 @@
                 <textarea name="message" id="message" rows="4" placeholder="Enter Your Spell Here" required></textarea>
                 <button type="submit" aria-label="Click to Submit Your Spell">Submit Spell</button>
             </form>
+        </div>
+        <div class="game-rules-container hide" id="game-rules">
+            <h2><i class="fa-solid fa-broom-ball"></i> Game Rules</h2>
+            <p>
+              Welcome to Sorcerer's Secret Spells, a quiz on magical spells.<br>
+              If you score above 17, you are an expert Witch or Wizard.<br>
+              If the score is between 7 & 17, you need a bit more practice.<br>
+              If you score less than 7, even Muggles know better than that!<br>
+              Once you are ready for some magical fun, click Begin Quiz.
+            </p>
         </div>
     </main>
     <!-- Footer -->
