Updated code to fix TypeError in the console

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </form>
         </div>
         <div class="game-rules-container hide" id="game-rules">
-            <h2><i class="fa-solid fa-broom-ball"></i> Game Rules</h2>
+            <h2><i class="fa-solid fa-broom-ball hide" id="game-rules-h2"></i> Game Rules</h2>
             <p>
               Welcome to Sorcerer's Secret Spells, a quiz on magical spells.<br>
               If you score above 17, you are an expert Witch or Wizard.<br>
