Updated HTML to fix the TypeError in the console on window load

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <button type="submit" aria-label="Click to Submit Your Spell">Submit Spell</button>
             </form>
         </div>
-        <div class="game-rules-container hide" id="game-rules">
+        <div class="hide" id="game-rules-container">
             <h2><i class="fa-solid fa-broom-ball hide" id="game-rules-h2"></i> Game Rules</h2>
             <p>
               Welcome to Sorcerer's Secret Spells, a quiz on magical spells.<br>
