Updated the h1 element by making it clickable to return to home screen

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <!-- Main content -->
     <main>
         <div>
-           <h1>
-                Sorcerer's Secret Spells <i class="fa-solid fa-hat-wizard"></i>
-            </h1>
+           <a href="index.html">
+                <h1>
+                    Sorcerer's Secret Spells <i class="fa-solid fa-hat-wizard"></i>
+                </h1>
+            </a>
         </div>
         <div class="welcome-screen">
             <button class="button glow" id="begin-quiz-button">
