--- a/thankyou.html
+++ b/thankyou.html
@@ -21,9 +21,11 @@
     <!-- Main content -->
     <main>
         <div>
-           <h1>
-                Sorcerer's Secret Spells <i class="fa-solid fa-hat-wizard"></i>
-            </h1>
+            <a href="index.html">
+                <h1>
+                    Sorcerer's Secret Spells <i class="fa-solid fa-hat-wizard"></i>
+                </h1>
+            </a>
         </div>
         <div class="image-container">
             <img id="thankyou-background" src="assets/images/thank_you.webp" alt="thank you">
