Added a new button to close the game rules container for better user experience

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
               If you score less than 7, even Muggles know better than that!<br>
               Once you are ready for some magical fun, click Begin Quiz.
             </p>
+            <button class="button glow" id="ready-button">
+                <i class="fa-regular fa-face-grin-stars"></i>
+                I'm Ready!!!
+            </button> 
         </div>
     </main>
     <!-- Footer -->
